--- a/src/styles/Card3.css
+++ b/src/styles/Card3.css
@@ -1,8 +1,8 @@
 .card3 {
     height: 300px;
-    width: 30%;
-    min-width: 280px;
-    margin: 0px 10px 0px 10px;
+    width: 100%;
+    max-width: 350px;
+    margin: 0px 5px;
 
     background: rgba(0, 0, 0, 0.15);
     backdrop-filter: blur(10px);
